<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MediaDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mediaDetailContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/media_poster_image"
            android:layout_width="@dimen/dp0"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp0"
            android:layout_marginBottom="@dimen/dp8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/image_text_vertical_guideline"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@mipmap/ic_launcher" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/image_text_vertical_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="@dimen/dp0"
            android:layout_height="@dimen/dp0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/image_text_vertical_guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/rating_container"
                android:layout_width="@dimen/dp0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp16"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/rating_left_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.3" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/rating_right_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.7" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/imdb_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintRight_toLeftOf="@+id/rating_left_guideline"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/imdb_value" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/imdb"
                    app:layout_constraintRight_toLeftOf="@+id/rating_left_guideline"
                    app:layout_constraintTop_toBottomOf="@+id/imdb_rating" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/metascore_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toRightOf="@+id/rating_right_guideline"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/metascore_value" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/metascore"
                    app:layout_constraintLeft_toRightOf="@+id/rating_right_guideline"
                    app:layout_constraintTop_toBottomOf="@+id/metascore_rating" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp16"
                android:layout_marginTop="@dimen/dp24"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rating_container"
                tools:text="Release date: January 9, 2019" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/director"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp16"
                android:layout_marginTop="@dimen/dp24"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/release_date"
                tools:text="Director: Dean John" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/writer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp16"
                android:layout_marginTop="@dimen/dp24"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/director"
                tools:text="Writer(s): Dean John, Chris Rome" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/storyline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp16"
                android:layout_marginTop="@dimen/dp32"
                android:text="@string/storyline"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/writer" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/storyline_description"
                android:layout_width="@dimen/dp0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp16"
                android:layout_marginTop="@dimen/dp16"
                android:layout_marginEnd="@dimen/dp16"
                android:breakStrategy="balanced"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/storyline"
                tools:text="@string/lorem_ipsum" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/results_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp16"
        android:text="@string/no_results"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="@dimen/dp40"
        android:layout_height="@dimen/dp40"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>